--- a/shared/human/body/muscle/training/tips/部位ごとに鍛える.md
+++ b/shared/human/body/muscle/training/tips/部位ごとに鍛える.md
@@ -24,6 +24,8 @@ https://youtu.be/YDQgDbHPTFA?si=gMgkA9G6KK1locN1
 
 歌いながらプランクや腕立てとか。
 
+姿勢が悪い、とくに腰が楽な姿勢で立ったり座ったりしていると腰回りの筋肉が衰えて腹が出やすい。
+
 ## 腹筋（外腹筋）
 
 - 上体起こし
