--- a/shared/voice/training/tips/発音を変える.md
+++ b/shared/voice/training/tips/発音を変える.md
@@ -2,14 +2,19 @@
 
 発音を変える要素
 
-- 唇の位置
 - 舌の位置
-- 喉の位置
+- 唇の位置
 - 顎の位置
+- 喉の位置
 
 ## 母音を変える
 
 母音を変えるときは舌だけ動かす。
+
+まずは口を大きく開けて、喉を下げて、軟口蓋を上げて、舌の動きだけで母音を変える練習から始める。太いストローや割り箸を咥えるのもいい。
+子音も使ってしまうとどうしても唇や顎を動かすことになりやすいので難しい。まず母音の口の動きに慣れてから子音を載せる。
+
+母音だけなら舌の動きだけで変えられる。唇や顎、喉が動くのはおかしい。
 
 ## 子音を変える
 
