--- a/shared/aesthetics/美.md
+++ b/shared/aesthetics/美.md
@@ -1,3 +1,5 @@
+あるべき姿。
+
 「美しい」の対義語は「醜い」よりも「怪しい」だ。
 
 醜いのは怪しい。
@@ -71,3 +73,5 @@
 気分が良くなるのが美しさの要素ということもある？
 
 見た目が美しいものに知性や善性を見出すのは人間のバグ。
+
+美しいとは頭の中の「あるべき姿」に近いということ。結果的に親近感が湧くし、正しいと感じる。
