--- a/shared/music/vocal/歌.md
+++ b/shared/music/vocal/歌.md
@@ -165,3 +165,5 @@ https://www.youtube.com/watch?v=KCqSzqBT0ik
 歌には反射神経が必要。伴奏の音を聞いて、その場で合わせるのが一番いい。
 
 歌は基本的に伴奏とハモっている。あるいは歌に伴奏がハモっている。
+
+声を使った会話が上手い人は歌も上手い印象。
