--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -123,3 +123,5 @@
 
 セックスして子どもを作りたいだけで気を遣わないといけない相手だと、セックス以外は友人を優先する場合がある。
 子どもは作ったけどずっと外に出て仕事やら趣味やらを優先する、という人は友人のような気の置けない関係が築けてない。
+
+恋人と友人を兼ねてもいい。
