--- a/shared/society/issues/社会問題.md
+++ b/shared/society/issues/社会問題.md
@@ -15,3 +15,9 @@
 企業の購入コストの問題もあるけど、社会の問題ではないし、購入量を契約して割引なんかもあるので単純ではない。
 
 逆に、農家にとってはどんどん消費してもらった方がいい。現代ではむしろ作りすぎてるくらい。特に足が速い生野菜などは早く消費しないといけない。
+
+男女比や死亡率などで社会の在り方も変わる。
+
+飢餓や災害、戦争で死亡率が高いと、死亡「させる」範囲が調整される。口減らしや災害への予防、対処、従軍、などでまず子どもが産めて、社会でも仕事がある者が優先して残される。
+子供を犠牲にしないのは強者の贅沢でしかない。
+食料が足りなくなった時、自分で食料を取ってこれない老人や子供から捨てるのは合理的で自然ではある。
