--- a/shared/technique/理論.md
+++ b/shared/technique/理論.md
@@ -92,3 +92,5 @@
 理論は知識の一種。抽象化された、技術的な情報。
 
 「正しくない」方法としては、「長続きしない」方法がひとつ。まぁ、一発屋で短期的に売れてあとは慎ましやかに暮らすのも人生ではあるけど。
+
+確率などの理論では無限を前提にする場合もあり、現実とは違うことも多い。でもほとんどの場面では近似値が出る。何も理論がないよりは近い。
