--- a/shared/communication/media/language/具体的な言葉.md
+++ b/shared/communication/media/language/具体的な言葉.md
@@ -3,3 +3,9 @@
 
 単に「マフラー」というよりも「青いマフラー」といった方が具体的に想像できる。
 特に物語では抽象的な言い方よりも具体的にした方がいい。追体験しやすい。
+
+言葉が抽象的になるほど何にでも当てはまる。逆に本質を表せてない。
+
+言葉が抽象的になるほど誰にでも汎用的に使えるけど、細かいニュアンスは抜けがち。
+
+言葉が抽象的になるほど説得力がない。
