--- a/shared/human/body/muscle/training/tips/部位ごとに鍛える.md
+++ b/shared/human/body/muscle/training/tips/部位ごとに鍛える.md
@@ -34,6 +34,10 @@ https://youtu.be/YDQgDbHPTFA?si=gMgkA9G6KK1locN1
 仰向けになるタイプの腹筋は腰が床から離れると腰を痛めやすい。
 腰の下に手を置いて、手を腰で床に押し付ける感覚を保ったまま行う練習をするといい。
 
+## 脇腹
+
+胴回りの筋トレといえばロシアンツイスト。脇の下のあたりに効く。
+
 ## 腕
 
 - 腕立て伏せ
