--- a/shared/influence/people/集団の意志決定.md
+++ b/shared/influence/people/集団の意志決定.md
@@ -3,3 +3,15 @@
 集団では、意志決定とは別に、意志の共有や統一が関連する。
 
 社会の文脈でもいいかも。
+
+1. それぞれが候補を出す
+2. 候補を絞る
+
+ただ意見を出すだけじゃなくて、候補を絞る。
+
+候補を絞るのはリーダーシップ。
+
+誰か一人が意見を通したいと思ったら、同じくらいの熱意がある人がいないとその人がリーダーになる。
+「俺の案でいい？」に反対意見が出ないとそれだけでリーダーが決まる。熱意がリーダーを決めている。
+
+リーダーシップは集団の意思決定の問題なのかも。
