--- a/shared/care/友人.md
+++ b/shared/care/友人.md
@@ -230,3 +230,6 @@
 気を使わなくてもいい、というのは、気を抜いても空気が悪くならない、ということ。
 
 友人以外には気遣いが必要。
+
+全く気を遣わない、家族みたいな感覚になるといい。
+ただ、どちらかというと家族が友人のようになる、と考えてもいいかも。家族は運命共同体。公共の文脈。友人には利害関係があるとは限らない。
