--- a/shared/intimacy/親近感.md
+++ b/shared/intimacy/親近感.md
@@ -27,3 +27,6 @@
 そもそも人に対して親近感が湧かないみたいなのは、距離感が壊れてるのかも。初めから近すぎてよくわからないとか、逆に極端に人に対して壁があるとか。
 
 親近感はやっぱtrustの一部なのかな。
+
+恋人はintimacyの延長だけど、友人は違う。
+親しくなるだけじゃなくて、気を遣わなくていいのが友人。
