--- a/shared/popular/tips/女性にモテたい.md
+++ b/shared/popular/tips/女性にモテたい.md
@@ -27,3 +27,6 @@ https://x.com/prada_46/status/1811005372855108064
 また、そもそも女性は出産がリスクなので、同様にリスクを負ってくれる人を求めるのかも。
 
 女性が試し行動したり待ちに回ったりするのは、「お前がやれ」って上から目線じゃなくて、そういう男性が良いものだから。男性かくあるべし。尽くしてくれる男。リスクを取る、責任を一緒に負ってくれる男。
+
+女性の方が男性を見る目は厳しい。
+女性は出産にリスクがあるので当然。
