--- a/shared/assertion/根拠.md
+++ b/shared/assertion/根拠.md
@@ -135,3 +135,6 @@ explanation も参照。
 証明は、命題が真か偽かを明らかにする。単純に「あるかないか」の場合もあるし、「XXはXX以上である」みたいに数字で決まる場合もある。「真である確率はXX%である」みたいに確率的な結論が出る場合もある。
 
 根拠は誰かに説明して説得するためにあるので、自分の行動に根拠は必要ない。
+
+根拠は思考の文脈ではない。
+自分の考え自体に根拠はいらないけど、それを誰かに伝えるなら根拠が必要。説得とか自己主張の文脈。
