--- a/shared/discussion/議論.md
+++ b/shared/discussion/議論.md
@@ -103,3 +103,11 @@ Assertion も参照。
 議論のメリットは考えが進むこと。新たな考えが手に入ること。できれば全体が新しい知見を手に入れられると一番いい。ただ、あくまでも全体の利益ではなく、個人の利益。考えを進めたいと思ってない人もいる。
 逆に雑談のメリットは空気が良くなること。でも、それに価値を見出さないで、自分の研鑽しか考えてない人もいる。
 結局、この二つは相入れないのかも。
+
+議論は勝ち負けよりも説得の場。
+論理的に破綻していても相手を説得して動かした方が勝ち。
+
+議論は集団の民主的な意思決定と言った方がいいかも。
+リーダーが引っ張っていくトップダウンの意思決定に対して、意見を出し合って決める。
+
+賄賂で意見を通してしまうと、意見が競い合わないのがだめ。
