--- a/shared/discussion/議論に勝つ.md
+++ b/shared/discussion/議論に勝つ.md
@@ -7,3 +7,7 @@
 
 「論破されるのはそれなりの知性を持っている人だけです。知性が欠如している人を論破することは原理的に不可能です。」
 https://x.com/kamo_hiroyasu/status/2008812520849748013?s=12
+
+「議論に勝つ」というのは「相手を説得して動かす」ということだ。相手が動かなかったら負け。
+
+同意できなくても共感して相手が動くなら勝ち。お願いしたりワイロで動かしたりもできる。
