--- a/shared/influence/people/説得.md
+++ b/shared/influence/people/説得.md
@@ -125,3 +125,5 @@ Assertion も参照。
 相手が何に注目しているか分かれば、それに合わせて相手にハマる話ができる。
 
 相手を知るのが、人を動かす第一歩。
+
+根拠は必要とまでは言わないけど、ある意味では信頼自体が根拠とも言える。論理的な根拠だけが根拠とは限らない。
