--- a/shared/government/democracy/民主主義.md
+++ b/shared/government/democracy/民主主義.md
@@ -81,3 +81,7 @@
 民主主義国家において、国民の敵は国民。そういう国民の足を引っ張る国民を殺さないといけない。これは肉体的な話じゃなくて、そういうことが許されないように社会的に殺すということ。
 
 民主主義が広まったのは、人権とかではなく、単に民衆、数の力こそが最強だったからだ。民衆は常に支配者よりも多い。
+
+民主主義はある意味「議論」の文脈かも。
+
+民主主義の強いところは議論を戦わせることで洗練することそのもので、賄賂や多数決で議論を戦わせずに意思決定したら民主主義の強みが生かされない。
