--- a/shared/society/tips/人に会う.md
+++ b/shared/society/tips/人に会う.md
@@ -3,3 +3,7 @@
 待ち時間とかに周りの人と目を合わせて、笑いかけて、声をかける。
 
 人に会う時は、洗濯してから一度も着てない、あるいはそもそも一度も着てない服を着るのが基本。まぁ、アウターはさすがにそこまでできないこともあるけど、せめてシャツやズボンはそうする。
+
+1. 相手から目を離さない
+2. 相手と目が合ったら微笑んで挨拶する
+3. 会話を続ける
