--- a/shared/thinking/analysis/特徴.md
+++ b/shared/thinking/analysis/特徴.md
@@ -11,3 +11,9 @@
 どんな特徴が考えられるか。能力や機能、強みや弱み、など。制約や目的、利用シーンは特徴ではなく特徴を活かす場面。
 
 外から見えるところがfeatures、内面がpreferencesのイメージ。
+
+- 強み
+  - 得意なこと
+  - 頑張っていること
+- 弱み
+  - 苦手なこと
