--- a/shared/society/greeting/挨拶.md
+++ b/shared/society/greeting/挨拶.md
@@ -34,3 +34,8 @@
 相手との関係性によって挨拶も使い分ける。
 
 conversationの文脈でもいいか。
+
+挨拶は会話の始まりの一番簡単なもの。
+せっかく挨拶したなら少しでも会話を続けたいところ。
+
+会話を続けるつもりがないなら声はかけずに遠くから目だけ合わせて手を振るとかで済ませてもいい。
