--- a/shared/art/芸術.md
+++ b/shared/art/芸術.md
@@ -342,3 +342,7 @@ artの本質は自由、人が介入すること。その技。
 他の人の働きを見て、「自分ならこうする」から始める。
 「自分ならこうする」が多い分野は興味がある分野かも。
 でも断片的な「自分ならこうする」があっても、作品として体系的に組み上げないと形にならない。
+
+素材から「あるべき姿」を掘り出すのがアートなのかも。手段として人の手が入るけど、やはり美がベース。
+
+アートは美学の実践。
