--- a/shared/communication/social/対人コミュニケーション.md
+++ b/shared/communication/social/対人コミュニケーション.md
@@ -15,3 +15,5 @@
 対人のコミュニケーションが苦手だと、接している相手からは「その人のことが」苦手なように見えてしまう。
 コミュニケーションを避けるということは、人を避けるということだ。
 人と関わるなら、コミュニケーションへの苦手意識は克服しないといけない。
+
+コミュニケーションは意外と複雑じゃない。
