--- a/shared/learning/tips/反省.md
+++ b/shared/learning/tips/反省.md
@@ -6,3 +6,6 @@
 悪いところを見つけるなら、どうしたら良くなるか、まで考えて実践できないと役に立たない。できないならそもそも悪いところが見えない方が幸せになれる。
 
 反省は思考の一種。
+
+過去の手を思い出してどうすればよかったか考えるのは大事。
+悪手に気付けるのが大事。気付けないと覚えてられない。
