--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -382,3 +382,5 @@ https://x.com/ggnka_icha/status/1810274912759918858
 相手に目を向けること。
 
 目を合わせたり、微笑んだり、手を振ったり、といったジェスチャーは尊重を示す意味もある。
+
+侮辱に関してはrespectの文脈だから、自分への誇りも同じ文脈だと思う。とはいえ所属への誇りはエンゲージメントだからどこに置くか微妙。
