--- a/shared/popular/tips/女性にモテたい.md
+++ b/shared/popular/tips/女性にモテたい.md
@@ -1,3 +1,6 @@
+- 格上
+- モテている
+
 女性から男性の方はモテるやつがモテる。
 だからモテたいならモテるやつを真似る。
 モテるアピールはモテないアピールになっている。
@@ -30,3 +33,5 @@ https://x.com/prada_46/status/1811005372855108064
 
 女性の方が男性を見る目は厳しい。
 女性は出産にリスクがあるので当然。
+
+男性は女性をちょっと怖がらせるくらいの方が強さを演出できて舐められないのかもしれない。
