--- a/shared/politics/tips/マウント.md
+++ b/shared/politics/tips/マウント.md
@@ -1,1 +1,5 @@
 劣った人にとっては優れた人の振る舞いがマウントに見えるのかもしれないけど、優れた人にとってはできて当たり前のことなので噛み合わない。
+
+「運とか他人のおかげにする」のはマウントとして受け取られるのを避けているのかも。
+幸せなことがあった話について、とくに何もフォローしないと、マウントとして受け取るサルとそうでない人がいる。
+例えば「IT業界は給料いいからね」みたいな話をした時とか。
