--- a/shared/human/mind/精神の健康.md
+++ b/shared/human/mind/精神の健康.md
@@ -11,3 +11,7 @@
 精神が病んで行動がおかしくなるのではなく、その二つはイコールである。
 
 精神的に弱ってる状態というのは、弱くなろうとしている状態。弱い振る舞いを増やしている。強い振る舞いを増やすように習慣をコントロールしないといけない。
+
+精神的に不安定なのは生きづらい。
+
+単純に現代の環境に適合してないだけ。適合していく方法もあるけど、それを選ぶかどうかはその人の好みでしかないし。
