--- a/shared/intimacy/誰かと親しくなる.md
+++ b/shared/intimacy/誰かと親しくなる.md
@@ -254,3 +254,5 @@ https://www.total-marriage.com/column/1644/
 逆は、疎遠になる。
 
 年をとると年上としてどうしても気遣われやすくなって、年下と親しくなるのが難しくなる。年寄りを敬う文化の弊害。
+
+「タメ口でもいいよ」は意味がない。やるなら「敬語禁止ね」にする。
