--- a/shared/music/vocal/歌.md
+++ b/shared/music/vocal/歌.md
@@ -167,3 +167,5 @@ https://www.youtube.com/watch?v=KCqSzqBT0ik
 歌は基本的に伴奏とハモっている。あるいは歌に伴奏がハモっている。
 
 声を使った会話が上手い人は歌も上手い印象。
+
+多くの人に自分の歌を聴いてもらうのは大事。意見も多くもらえるし、刺さる人もいるかもしれないし。
