--- a/shared/trust/期待感.md
+++ b/shared/trust/期待感.md
@@ -114,3 +114,7 @@ https://youtu.be/8UQrZj8ew88?si=Q4SyTngFg-SdugS1
 おじさんはその年まで実績がないということ自体に期待感がない。
 
 きょろきょろと落ち着かなくても目が輝いていれば期待感がある。
+
+期待感を持たせるには恩恵をアピールしないといけない。一番いいのは言葉よりも先払い。
+
+自分が誰かに与えられる恩恵ってなんだろう？メリット。
