--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -119,3 +119,7 @@
 まぁ、人によって態度を変えるのは気分が悪いけど、誰にでも建前で良い態度を続けている人は単に気遣いをしている人。
 
 嘘をつく人が魅力的なのは、それが気遣いだからかも。嘘には手間がかかる。
+
+気遣いというのは、根本的に相手を下に見ている。子どもか獣くらいに思っているからこそ気遣いが必要。
+
+短く伝えることが気遣いになる場面もあれば、丁寧に話すことが気遣いになる場面もある。
