--- a/shared/love/interesting/興味.md
+++ b/shared/love/interesting/興味.md
@@ -36,3 +36,5 @@
 興味がないとそもそも好きとか嫌いとかない。
 
 興味と関心は、興味が愛で、関心が情。愛があっても別に助けてはくれないこともある。情は助ける。
+
+王将の餃子を食べて「生姜の味がする」などとわかるのは興味があるから。興味がないと詳しい味なんてわからない。解像度は興味の指標の一つ。
