--- a/games/shogi/将棋.md
+++ b/games/shogi/将棋.md
@@ -24,3 +24,5 @@ AIの将棋はもはや薄い囲いから先に入玉してそのまま押しつ
 序盤の駒組みでも相手がミスったら攻められるように牽制しないといけないし、自分も相手の牽制に対してミスらないように受けないといけない。
 
 序盤で隙があると急戦になる。
+
+将棋で強いのは、取っても取らなくても不利になる手と、取れない手。
