--- a/shared/trust/期待感.md
+++ b/shared/trust/期待感.md
@@ -118,3 +118,5 @@ https://youtu.be/8UQrZj8ew88?si=Q4SyTngFg-SdugS1
 期待感を持たせるには恩恵をアピールしないといけない。一番いいのは言葉よりも先払い。
 
 自分が誰かに与えられる恩恵ってなんだろう？メリット。
+
+期待感は信頼の一部で、期待感を煽るために信頼を失ったり、最悪警戒されたりするのは許されない。
