--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -123,3 +123,5 @@
 気遣いというのは、根本的に相手を下に見ている。子どもか獣くらいに思っているからこそ気遣いが必要。
 
 短く伝えることが気遣いになる場面もあれば、丁寧に話すことが気遣いになる場面もある。
+
+席に座ってすぐ挨拶してないから気まずいのかも。すぐ挨拶して、すぐ会話に入る。
