--- a/shared/action/tips/目的を示す.md
+++ b/shared/action/tips/目的を示す.md
@@ -1,3 +1,9 @@
 目的が伝わらないと、周りの人には怖がられることもある。
 
 ただ、そもそも反社会的な目的であれば隠さないといけない。
+
+自分からアクションするのが大事。
+何もしないと目的がわからなくて怖い。行動が目的を示す。
+
+そもそも何も考えてないのも怖いのかも。
+大体の人は、なんらかの目的を持って動いている前提で考えている。
