--- a/shared/love/interesting/興味を示す.md
+++ b/shared/love/interesting/興味を示す.md
@@ -1,3 +1,8 @@
+## Good
+
+- 話したことを覚えている
+  - 誕生日などのちょっとしたことでも覚えている
+
 ## Bad
 
 - 解像度が低い
@@ -10,3 +15,6 @@
 興味がありそうに見せるのが大事。興味を示す。
 
 返事が単調だと興味がないように見える。
+
+全ての人に興味を示すのは無理があるので、人数を絞るのも大事。
+とはいえ覚えられるなら覚えておいて損はない。
