--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -19,3 +19,6 @@
 恋人を選ぶためにデートする。
 
 誰か一人にアプローチする場合でも、他の異性への気遣いを怠ると、気になる人にもその態度を見られていると思ったほうがいい。
+
+恋愛は女子から追われるべきだけど、誘うのは男性であるべき。
+男性から追うのは格下みたいだし、長続きしないので良くない。
