--- a/shared/voice/training/tips/声色を変える.md
+++ b/shared/voice/training/tips/声色を変える.md
@@ -207,3 +207,5 @@ https://youtube.com/watch?v=XWGCrPW6e-M&si=zPTuAuo2jKXU7pQ7
 舌の位置は声色に結構影響する。
 
 口の中の空間を小さくすると子どもっぽい声になる。
+
+頑張って声を出すと頑張っている声になってちょっと苦しそうな感じが伝わってしまうので、頑張らずに力が入った声を出せるように鍛える。
