--- a/shared/care/tips/関心を示す.md
+++ b/shared/care/tips/関心を示す.md
@@ -43,6 +43,7 @@
 - 放ったらかしておいて「これどうなった？」と聞く
 - 頻繁に話を変える
 - 手を抜く、手間や時間を惜しむ
+- 遠慮して何もできない
 
 「これどうなった？」って聞くのは無関心の証。見てないからこそ出てくる台詞だ。
 「これこうなってるけど大丈夫そう？」と聞かないといけない。
