--- a/shared/care/関心.md
+++ b/shared/care/関心.md
@@ -1,4 +1,8 @@
-# 関心
+# Attention
+
+関心、注目、注意。
+
+目を離さないこと。
 
 利があるか、害があるか、で対象を見る。
 
@@ -175,3 +179,6 @@ careの関心は注意の方が近いかも。mindとも近い。
 興味があっても関心がない、積極的に関わるつもりはない、ということはありうる。
 
 関心のベースは相手が困っているかどうか。
+
+人と一緒にいる時に人から目を離すのは、人よりもそれ以外に関心が向いてしまっている。
+周りじゃなくて、一緒にいる人に目を向ける。
