--- a/shared/intimacy/誰かと親しくなる.md
+++ b/shared/intimacy/誰かと親しくなる.md
@@ -258,3 +258,8 @@ https://www.total-marriage.com/column/1644/
 「タメ口でもいいよ」は意味がない。やるなら「敬語禁止ね」にする。
 
 「友達」リストに入れる、とかもある。
+
+自分のことを好きな人とそうでない人では正しい対応が異なる。
+自分のことを好きな人にはより効果的な対応をした方がより親しくなれる。
+
+親しくなる前に、まず好かれること。
