--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -1015,3 +1015,10 @@ loveとgoodの概念は近い。
 好意はあるけど愛がないということはある。愛は行為だから、好意があってもやるかどうかは人による。
 
 人を愛するという行為を知れば、人を好きになれる。
+
+他人にはまず興味を持つのが大事。
+おもしろい、つまらない、というのは興味の問題でしかない。
+相手をつまらないと判断した時点で愛がない。
+
+愛とは、対象を「おもしろい」と仮定することだ。
+「つまらない」と思わないこと。
