--- a/shared/sex/dating/tips/恋愛感情.md
+++ b/shared/sex/dating/tips/恋愛感情.md
@@ -44,3 +44,7 @@
 好意の中でスキンシップとか、二人きりになるのは恋愛感情にもなる。
 
 男は下に見られると恋愛対象にならない。
+
+女性は、好きな人にはリードされたいという意見をよく聞く。二人で決めるよりも引っ張ってほしい。
+
+女性の意見は「ただしイケメンに限る」と言われることもあるけど、どちらかというと「ただし好きな人に限る」が近いかも。
