--- a/shared/love/interesting/興味を示す.md
+++ b/shared/love/interesting/興味を示す.md
@@ -1,6 +1,7 @@
 ## Good
 
-- 話したことを覚えている
+- 名前を呼ぶ
+- 過去に話したことを話題にする
   - 誕生日などのちょっとしたことでも覚えている
 
 ## Bad
@@ -9,6 +10,7 @@
 - (会話)
   - 返事が単調
   - 声のトーンが合わない
+- 相手の言ったことを否定する
 
 ## その他
 
