--- a/shared/love/tips/人を好きになる.md
+++ b/shared/love/tips/人を好きになる.md
@@ -3,6 +3,9 @@
 - 相手に興味を持つ
 - 相手に会う
 - 相手を知る
+- 恩恵を感じる
+  - 良いところを探す
+  - 感謝の気持ちを持つ
 
 積極的に人を好きになるためには、真似したいところを見つけるといい。
 服装や化粧のように表面的なところでもいいし、言動でもいいし、仕事や趣味でもいいし。
