--- a/shared/trust/恩恵.md
+++ b/shared/trust/恩恵.md
@@ -1,5 +1,8 @@
 # Favor
 
+一緒にいて良いこと。
+一緒にいて得られるもの。
+
 相手に期待すること。
 
 相手の希望がベース。
@@ -9,15 +12,6 @@
 
 実利的、経済的なものだけじゃなくて、精神的、感情的なものも含まれる。
 
-- 幸せになれる
-- 奢ってくれる
-- 人を紹介してくれる
-- 仕事を紹介してくれる
-- 助けてくれる
-- 守ってくれる
-- 楽しませてくれる
-- など
-
 人によっては刺激が少ないのも恩恵ではある。落ち着いて付き合える。安心できる。
 
 どんな恩恵を期待するか。
@@ -26,3 +20,19 @@
 
 ステータスは分け前を期待してる。
 金持ちとか、芸能人の友人がいるとか。
+
+- 機能的
+  - 助けてくれる
+  - 守ってくれる
+- 感情的
+  - 幸せになれる
+  - 気分が良くなる
+  - 楽しませてくれる
+  - 癒してくれる
+  - 盛り上げてくれる
+- 経済的
+  - 奢ってくれる
+  - 贈り物をくれる
+- 社会的
+  - 人を紹介してくれる
+  - 仕事を紹介してくれる
