--- a/shared/love/interesting/興味.md
+++ b/shared/love/interesting/興味.md
@@ -38,3 +38,6 @@
 興味と関心は、興味が愛で、関心が情。愛があっても別に助けてはくれないこともある。情は助ける。
 
 王将の餃子を食べて「生姜の味がする」などとわかるのは興味があるから。興味がないと詳しい味なんてわからない。解像度は興味の指標の一つ。
+
+人に対する興味の優先順位は高い方がいい。
+キョロキョロして人から目を離すのはよくない。
