--- a/shared/society/tips/子どもに合わせる.md
+++ b/shared/society/tips/子どもに合わせる.md
@@ -5,3 +5,8 @@
 どちらか一方が楽しませないと会話が続かないなら、そもそも相手の態度が悪い。子供と会話していると思った方がいい。
 
 社交を知ってる大人と、そうでない子供では扱いが異なる。
+
+欲しいなら欲しいって言えないのも子供ではある。
+
+大人同士でばかり付き合っていると子供に合わせる能力が衰える。
+大人としての常識が通用しない人とでも会話できた方が顔を広げやすい。
