--- a/shared/job/hiring/recruitment/interview/面接.md
+++ b/shared/job/hiring/recruitment/interview/面接.md
@@ -87,3 +87,9 @@ https://logmi.jp/business/articles/328248
 就職面接は自分という製品の売り込みをしてる。
 
 「このボールペンを1万円で売ってください」みたいな100万回擦り散らかしたようなクソテンプレ面接って本当にあるのかな？実際、面接に対処するためだけに原価ゼロのボールペンを1万円で売るだけなら、ボールペンに1万円巻きつけて売るだけで別にいいんだよな。「こんなカビ臭いクソテンプレ茶番に付き合ってあげただけで感謝して欲しい」くらい言ってもバチは当たらないと思う。
+
+面接はインタビューの一種。
+相手からこっちの話を聞いてくる。
+でもこっちも自己開示しつつ、相手の関心を探って、どういうポジションを求めているのか探る。決め手を探る。
+
+こっちも採用の決め手を探るのが大事。
