--- a/shared/trust/tips/人に好かれる.md
+++ b/shared/trust/tips/人に好かれる.md
@@ -62,3 +62,20 @@
 相手を好きになる、興味を向けることで好かれる。
 
 相手の体ではなく心に興味を示す。
+
+よくない性質:
+
+- 気分屋
+- 自慢話が多い
+- 相手によって態度を変える
+- 愚痴が多い
+- 他人に口出しする
+- 自己中心的
+- 人目を気にしすぎる
+- 思い込みが激しい
+- 悪口が多い
+- 細かすぎる
+- 褒められても否定から入る
+- いつも機嫌が悪い、すぐ拗ねる
+- 他人と比べたがる
+- 傷つきやすい
