--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -267,3 +267,6 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 そもそも違和感や異物感は緊張感を生み出す。それを緩和して、社会に馴染ませる必要がある。
 
 ユーモアはまずその人自身の個性、異常性、異物感こそが基礎。それを社会に馴染ませるのが本質。
+
+失敗談を話した方がいいのは、ユーモアがあるから。
+失敗談を整理したのが滑稽話。
