--- a/shared/talk/つまらない話.md
+++ b/shared/talk/つまらない話.md
@@ -1,3 +1,6 @@
+つまらないということは、興味がないということ。
+相手の興味を引けないとつまらない話になる。
+
 つまらない話というのは、事実だけで思考や感情を話していないだけだ、という意見があった。
 https://www.youtube.com/watch?v=OS5svE2jtyk
 そうなると、話がつまらないのは、話し手の思考や感情を引き出せる質問ができてないのもあるのかも。
