--- a/shared/talk/話.md
+++ b/shared/talk/話.md
@@ -79,3 +79,26 @@ talkができなくてもconversationはできる。talkがつまらなくても
 「誰もいねえ」
 みたいなのは出来事。でも出来事も補足した方が解像度を上げられる。
 これは出来事自体が面白かったパターンの話し方。
+
+喋りと声楽は似たところがある。
+
+むしろ声楽は朗唱から派生したものと考えられる。
+韻を踏んだりするのは歌唱というよりも朗唱の特徴の一つ。
+
+まずは内容よりも喋り方が大事。
+発声であったり、間であったり、言葉遣いであったり。
+
+考えながら喋ると相手から目を離しやすいので、まず考えてから、相手を見て話すといい。
+ただ、短期記憶が弱いと考えたことを持っておけなくてこれができない場合もある。
+
+滑舌が悪かったらゆっくり喋るといい。
+
+SpeakingはSingingの派生。言葉を喋るなら、どっちにしてもリズムが必要。ただ、メロディやハーモニーをそこまで重視しない。
+
+話が上手い人は歌も上手い人が多い。リズムや抑揚の取り方が共通している。ただ、音感が悪すぎるとその限りではない。
+
+人の話を聞く能力が低い人に囲まれて過ごすと、とにかく早口で喋る癖がつきやすい。
+
+何を目指すかによっても話し方は違う。
+
+話はspeakingとは限らない。文字などで話すのもtalkだ。
