--- a/shared/care/attention/tips/関心を示す.md
+++ b/shared/care/attention/tips/関心を示す.md
@@ -44,6 +44,7 @@
 - 頻繁に話を変える
 - 手を抜く、手間や時間を惜しむ
 - 遠慮して何もできない
+- 相手が食べたり飲んだりしているのに質問する
 
 「これどうなった？」って聞くのは無関心の証。見てないからこそ出てくる台詞だ。
 「これこうなってるけど大丈夫そう？」と聞かないといけない。
@@ -89,3 +90,5 @@
 関心を示すということは、興味や理解を示すということ。
 
 相手の変化に気づいて声をかけるのは会話というよりも、興味や関心を示すのが目的。
+
+食べるタイミングで声をかけたりするのも相手をよく見ていない証拠だ。
