--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -126,3 +126,7 @@
 短く伝えることが気遣いになる場面もあれば、丁寧に話すことが気遣いになる場面もある。
 
 席に座ってすぐ挨拶してないから気まずいのかも。すぐ挨拶して、すぐ会話に入る。
+
+職場で雑用したりはするけど、本当に手持ち無沙汰だからやる、みたいなこともある。
+
+お礼をするよりも、なんの関係もなくお土産を買ってきたり、プレゼントしたりする方が相手に気負わせない。
