--- a/shared/human/body/muscle/筋肉.md
+++ b/shared/human/body/muscle/筋肉.md
@@ -3,10 +3,32 @@
 
 体が上手く動かない場合、筋肉が育っていないか、筋肉が疲れている。
 
-速く動かす、
-遅く動かす、
-最大の力で固定する、
-途中で固定する、
+- 速く動かす
+- 遅く動かす
+  - ゆっくり力を入れる
+  - ゆっくり力を抜く
+- 動かさない
+  - 最大の力で固定する
+  - 途中で固定する
+
 筋肉にはこれらの動きが必要。
 
 筋肉は力を入れるより抜く方が早い。
+
+筋肉の主な部位:
+
+- 内側
+  - 体幹（内側の腹筋）
+  - 横隔膜
+- 外側
+  - 首や肩
+  - 胸や腕
+  - 腹筋
+  - 背筋
+  - 腰
+    - 脇腹
+    - 下腹
+    - 尻
+  - 脚
+    - 太もも
+    - ふくらはぎ
