--- a/shared/trust/期待感.md
+++ b/shared/trust/期待感.md
@@ -120,3 +120,10 @@ https://youtu.be/8UQrZj8ew88?si=Q4SyTngFg-SdugS1
 自分が誰かに与えられる恩恵ってなんだろう？メリット。
 
 期待感は信頼の一部で、期待感を煽るために信頼を失ったり、最悪警戒されたりするのは許されない。
+
+嘘をつかない方が期待感がある。
+
+嘘をつくとその後も「嘘かもしれない」と思って信用されない。
+
+自然体というのは、作ってないように見える、ということ。嘘や虚飾がないように見える。
+でも、ナチュラルメイクがそうであるように、本当に嘘がないかはわからない。
