--- a/shared/feeling/感じ方.md
+++ b/shared/feeling/感じ方.md
@@ -25,3 +25,6 @@ https://youtu.be/Ub5CTXX24RM?si=yCoq02EHU9_K8gnl
 「桃鉄弱そう」
 「風呂上がり素っ裸で動き回ってそう」
 みたいな、人に対する偏見も感じ方の話。手に入れた情報から得られる予測の一種。
+
+なんで笑えたのか。
+なんで興味を引いたのか。
