--- a/shared/music/theory/抑揚.md
+++ b/shared/music/theory/抑揚.md
@@ -29,3 +29,5 @@ https://gigazine.net/news/20211130-music-negative-superstimulus/
 
 強弱にも、音量だけじゃなくて、強く聞こえる音色や弱く聞こえる音色がある。
 声が震えていると弱く聞こえるし、響きがなくても細く聞こえる。
+
+パートだけじゃなくて、フレーズごとにも抑揚がある。
