--- a/shared/music/theory/音楽性.md
+++ b/shared/music/theory/音楽性.md
@@ -29,3 +29,5 @@ https://youtu.be/MdguaYfiX_8?si=7jde-QKo0p-XF9oa
     - 違う旋律（ハモリ）
     - 同じ旋律（ユニゾン）
   - 声色や楽器の音色
+
+音楽性は正しい抑揚のこと。一番重要な部分に向けて盛り上がっていく。場合によってはそこからまた落ち着いて終わる。
