--- a/shared/joke/冗談.md
+++ b/shared/joke/冗談.md
@@ -16,3 +16,6 @@ AIに面白いことを喋らせられるか。
 小さなジョークを積み重ねることで、ジョークをいう人なんだ、と思われておけばいざという時に「冗談やって」で済ませられる。もちろん信頼関係を築いてない人にまで「冗談やって」って言っても通じないから範囲には気をつけないといけない。ちょっとした失敗を誤魔化しやすくする知恵。
 
 冗談を言うなら、普段からこまめに冗談を言っておかないと本気だと思われる。
+
+「ふふふ、マウントしていきますよ」みたいにマウントもジョークにすると、マウントしているように見えない。
+世の中にはマウントされてなくてもマウントされたと感じる人がいるのでその予防。
