--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -130,3 +130,5 @@
 職場で雑用したりはするけど、本当に手持ち無沙汰だからやる、みたいなこともある。
 
 お礼をするよりも、なんの関係もなくお土産を買ってきたり、プレゼントしたりする方が相手に気負わせない。
+
+気遣いがそもそも上から目線って部分もある。ただ、獣に対しての防衛という面もある。まぁ、殺せば済むなら無理に気遣わなくてもいい。
