--- a/shared/decision/tips/助言を受ける.md
+++ b/shared/decision/tips/助言を受ける.md
@@ -1,3 +1,5 @@
 自分よりも知識や経験がある人を見分けられないと、助言を受け入れるべきかどうか判断できない。
 
 友人として信頼しているからといって、専門分野でもない助言を受け入れるべきではない。医療、政治、恋愛、など。
+
+下手な人の言うことを真に受けると自分も下手になってしまう。
