--- a/shared/engagement/tips/賞罰.md
+++ b/shared/engagement/tips/賞罰.md
@@ -32,3 +32,7 @@
 自分の手で人を殺すことよりも誰かに指示して 2 人で殺すほうが罪深い。罪が倍になっている。
 
 連座で処分する場合でも、まず本人を処分するべき。本人を処分できないならその繋がりで連座で処分される者も処分してはいけない。
+
+「まだ何もしてない」ってのはどうでもいいことだ。やろうとした時点でだめ。予防で殺されても文句は言えない。
+通常の司法でまだ何もしてない人が裁かれないのは、意思を立証できないから。「まだ何もしてない」から見逃されているわけではない。
+ゲームとか思考実験とかの問題で意思を前提とするなら「まだ何もしてない」は裁かない理由にならない。
