--- a/shared/health/exercise/tips/心肺を鍛える.md
+++ b/shared/health/exercise/tips/心肺を鍛える.md
@@ -8,3 +8,6 @@ https://youtube.com/shorts/LC98TGlGbF4?si=bwAyVwLlLMVCUJkn
 
 心臓は短距離走など負荷の高いトレーニングで心拍数を上げる。
 ただ、心臓を鍛えるというよりは酸素の供給のほうが大事だと思う。まず酸素がないと心臓がどれだけ鼓動しても意味ない。
+
+https://x.com/ninnikinene/status/2013046326779588746?s=61
+心肺を鍛える筋トレ
