--- a/shared/human/body/muscle/training/exercises/スクワット.md
+++ b/shared/human/body/muscle/training/exercises/スクワット.md
@@ -22,6 +22,7 @@
 
 ## 派生
 
+- ゆっくり腰を下ろす
 - スクワット
 - スクワットホールド
 - ドクターズスクワット
@@ -29,3 +30,5 @@
 ## その他
 
 膝を完全に曲げ切ってしゃがんだり立ったりするだけでもいい。なんなら最初は負荷が低いので始めやすい。
+
+スクワットもきつかったらまずはゆっくり腰を下ろすだけにする。
