--- a/shared/human/body/muscle/training/exercises/腕立て伏せ.md
+++ b/shared/human/body/muscle/training/exercises/腕立て伏せ.md
@@ -38,17 +38,22 @@
 
 ## 腕立ての種類
 
-1. ダイヤモンドプッシュアップ
-2. リーンプッシュアップ
-3. パイクプッシュアップ
-4. リーンムーブ or ショルダータッチプッシュアップ
-5. サークルプッシュアップ
-6. ナロープッシュアップ
-7. ヒンドゥープッシュアップ
-8. ショルダータッチパイクプッシュアップ
+1. ゆっくり胸を床に下ろすだけ
+2. 膝をつく
+3. ダイヤモンドプッシュアップ
+4. リーンプッシュアップ
+5. パイクプッシュアップ
+6. リーンムーブ or ショルダータッチプッシュアップ
+7. サークルプッシュアップ
+8. ナロープッシュアップ
+9. ヒンドゥープッシュアップ
+10. ショルダータッチパイクプッシュアップ
 
 [【たった 10 回】騙されたと思って 30 日間この筋トレを試してみてください。 - YouTube](https://youtube.com/watch?v=52xzTBcO6eQ&si=stx95a5PmeSTsLeF)
 
 ## その他
 
 腕立ては姿勢を調整すると鍛える筋肉を変えられる。
+
+腕立ての負荷を調整する場合、まず膝をつくと負荷が軽くなる。
+それでも決まった回数達成できなければ、上下させるんじゃなくて、ゆっくりと下ろして胸を床につくだけにする。
