--- a/shared/human/body/muscle/training/筋トレ.md
+++ b/shared/human/body/muscle/training/筋トレ.md
@@ -25,3 +25,8 @@ https://x.com/isozaki_ryota/status/2008282357720379730?s=12
 筋トレはその日その日の負荷を記録するというよりは、最大を記録するのが楽。少しずつ負荷を上げていく。
 
 https://x.com/suzuran_www/status/2010824821874299115?s=20
+
+筋トレは負荷の度合いとどこに効果があるかで整理するといい。
+
+筋トレと運動は混ぜてしまってもいいかも。
+運動もhealthの文脈じゃなくてもいいかもしれない。
