--- a/shared/mood/happy/praise/褒める.md
+++ b/shared/mood/happy/praise/褒める.md
@@ -137,3 +137,6 @@ pleasure.
 「嬉しくて、〜しちゃった」みたいなのは説得力がある。本当に喜んでいるように見える。
 
 褒めるだけじゃなくて、相手が褒められて嬉しいと思わないと意味がない。
+
+褒めるのは、相手に好かれてから。
+好きでもない人に褒められても裏があるのかと思う。
