--- a/shared/action/衝動.md
+++ b/shared/action/衝動.md
@@ -3,3 +3,5 @@
 衝動は基本的に抑えるべきものとされている。
 まぁ、判断が甘くて、目的に対して効果的でない場合もよくある。
 ただ、そこにはなんらかの欲求があったはずだ。それ自体は拾って、正しく行動するべき。
+
+サイコパスは共感性の欠如が強調されることも多いけど、まず衝動性が大きな特徴。ブレーキが弱い。やたらと行動的でリスクを取るタイプの人はサイコパスだと思った方がいい。
