--- a/shared/communication/media/language/languages/japanese/日本語.md
+++ b/shared/communication/media/language/languages/japanese/日本語.md
@@ -5,3 +5,5 @@
 日本語もチャンクから入った方がいいかも。「ねぇ」「聞いてよ」「元気？」とか。
 
 日本語には声に出す時だけややこしい読み方を変える文化がある。たとえば私立と市立の同音異義語を区別するために前者を「わたくしりつ」と読むことがある。
+
+日本語はもはや「サルサソース」とか「チャイティー」とかも言うから「頭痛が痛い」とかでどうこう言ってる場合じゃない。
