--- a/shared/trust/期待感.md
+++ b/shared/trust/期待感.md
@@ -127,3 +127,5 @@ https://youtu.be/8UQrZj8ew88?si=Q4SyTngFg-SdugS1
 
 自然体というのは、作ってないように見える、ということ。嘘や虚飾がないように見える。
 でも、ナチュラルメイクがそうであるように、本当に嘘がないかはわからない。
+
+金持ちでもその人が自分に興味ないと恩恵があるとは思わない。親近感とか、相手からの好意は自分も好きになる要素の一つ。ただ、その前に近づいて得られる恩恵が必要。近いだけじゃダメ。
