--- a/shared/intimacy/tips/好意を示す.md
+++ b/shared/intimacy/tips/好意を示す.md
@@ -4,3 +4,5 @@
 でも多少仲良くなってきたら好意を示すことでより近づける場合がある。
 
 相手がこっちに好意を持ってないのに過度に好意を示すのは怖い。悪意を隠さないといけない。
+
+嫉妬や独占欲を見せるのは好意を示している。でもべつに本気である必要はない。逆に表に出ない嫉妬は意味がない。
