--- a/shared/game/ゲーム性.md
+++ b/shared/game/ゲーム性.md
@@ -7,3 +7,5 @@ https://youtu.be/E0jRca-ijpY?si=iceQhAznerYXfoHN
 - 身近な人を救うことと世界を救うことが繋がっているゲーム性
 - サブクエでも身近な人を救うことが一貫している
 - できなかったことができるようになる、汎用的なアイテムの設計
+
+ゲームでは「不便さが楽しい」のが大事。なんでも便利にすればいいわけじゃないけど、楽しくないとただ不便なだけ。バランスが難しい。
