--- a/shared/human/body/muscle/training/筋肉を大きくする.md
+++ b/shared/human/body/muscle/training/筋肉を大きくする.md
@@ -4,6 +4,7 @@
 
 ## コツ
 
+- 筋肉をつける前に、体力をつける
 - 成長に合わせて負荷を増やす
 - 運動量を増やす
   - プロテインだけに頼らないで食事もしっかり摂る
@@ -33,3 +34,15 @@ https://youtu.be/MQLp90Qv4gc?si=SUm-VgQyPcKkIlYw
 
 筋肉を大きくするためには、回復させる時間と栄養が必要。
 脂肪を落とすだけなら毎日走ったりするのもいいけど、筋肉を大きくするならちゃんと計画を立てたほうがいい。
+
+筋肉をつけるには、回数を増やすよりも負荷を高める。
+ゆっくりやる、重りをつける、より重力がかかる方法で行う、など。
+
+筋肉は消費が大きいのでそもそも必要なくなると落ちやすい。
+継続しないと意味がない。
+
+無酸素運動は筋肉も消費する。必ず筋肉をつける食事とセットで行うべき。
+
+筋肉を鍛えるなら、筋トレというより単に筋肉に力を入れるだけでもいい。自重よりさらに負荷は低いけど。
+
+筋肉をつける前に体力をつける。少ない回数でもいいのでまずは全身の筋トレを続ける。腕立て20回、プランク30秒、スクワット20回、あたりから始める。
