--- a/shared/popular/tips/男性にモテたい.md
+++ b/shared/popular/tips/男性にモテたい.md
@@ -5,3 +5,5 @@
 子供や老人を性的に見る男性はちょっと特殊。
 
 「女には穴があるから、どんな女にも彼氏はできるので、彼氏がいること自体は「モテ」を担保しない。」（@Cryptobanker_Z）
+
+男はいわゆる女って嫌い。考えなしで、恋愛脳で、他人を評価して、人によって態度が違う。
