--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -178,3 +178,5 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 政略結婚とか強い使命感があれば相性が悪くても関係を維持できることもある。
 
 社交では安心感を与える。長く付き合うことで信用に変わる。
+
+無理に全ての人と付き合う必要はない。
