--- a/shared/trust/期待感.md
+++ b/shared/trust/期待感.md
@@ -22,6 +22,7 @@ Hope.
 - 約束して、それを守る
 - 将来性がある
 - 真実味がある
+- 若い
 
 信頼感とは期待感のことだ。
 ドキドキワクワクする感じ。
@@ -129,3 +130,6 @@ https://youtu.be/8UQrZj8ew88?si=Q4SyTngFg-SdugS1
 でも、ナチュラルメイクがそうであるように、本当に嘘がないかはわからない。
 
 金持ちでもその人が自分に興味ないと恩恵があるとは思わない。親近感とか、相手からの好意は自分も好きになる要素の一つ。ただ、その前に近づいて得られる恩恵が必要。近いだけじゃダメ。
+
+若いと言うだけでもある種の期待感がある。
+老いてない、枯れてない、と言うべき。
