--- a/shared/human/body/muscle/training/筋トレ.md
+++ b/shared/human/body/muscle/training/筋トレ.md
@@ -32,3 +32,5 @@ https://x.com/suzuran_www/status/2010824821874299115?s=20
 運動もhealthの文脈じゃなくてもいいかもしれない。
 
 https://youtube.com/shorts/XidLUyHry7g?si=lH8Mb283u2gbl-UH
+
+筋肉をつける前に体力をつける。少ない回数でもいいのでまずは全身の筋トレを続ける。腕立て20回、プランク30秒、スクワット20回、あたりから始める。
