--- a/shared/sex/性的魅力.md
+++ b/shared/sex/性的魅力.md
@@ -20,7 +20,9 @@
     - 服が高そう
     - 服飾品が高そう
 - 健康
+  - 若い
   - よく笑う
+  - 姿勢がいい
   - 尻が大きい
   - 胸が大きい
   - 顔色がいい
@@ -30,3 +32,5 @@
   - 痩せすぎていない
 
 性的興奮を感じるかどうか。
+
+姿勢が良いのは体力や筋力を感じさせる。
