--- a/shared/voice/training/ボイストレーニング.md
+++ b/shared/voice/training/ボイストレーニング.md
@@ -84,3 +84,5 @@ A4とかの国際表記で説明してない講師はちょっと怪しい。hiA
 VTuberの姫森ルーナやさくらみこ、P丸様。みたいに声が独特すぎる場合は、オペラ的な「正しい」声の出し方で個性を殺してはいけない。つまり、伝統的な練習方法の一部が適用できないので、独自メニューが必要。歌える曲の幅は狭くなりやすいけど、声に合った曲を選ぶ。
 
 カラオケやスタジオでは大きな声を出す練習が優先。曲ごとの音程とかは家でもできる。
+
+咳が出る時は呼吸の練習でもちょっと避けたい。声も息も出さずに声帯を伸ばしたり喉を広げたりする筋トレとか、腹筋背筋みたいな普通の筋トレとかかな。
