--- a/shared/breath/training/tips/横隔膜を下げる.md
+++ b/shared/breath/training/tips/横隔膜を下げる.md
@@ -178,3 +178,5 @@ https://youtube.com/watch?v=kfUlPS8VuOo&si=oFG8I0Q5oRiJqC9R
 横隔膜を下げるというよりは広げる感覚が近い。ただ、柔らかいソファに背中を預けるような感覚とも言われる。
 
 横隔膜を下げるのは単に腹式呼吸で息を吸う感覚と同じ。感覚としては息を吸ったまま、腹筋で加圧して息が外に出るようにする。吸うときは腹筋だけ力を抜く。
+
+横隔膜を下げる練習は息を止めたほうが楽なので、難しかったらまずは息を止めて練習する。
