--- a/shared/intimacy/tips/好意を示す.md
+++ b/shared/intimacy/tips/好意を示す.md
@@ -6,3 +6,5 @@
 相手がこっちに好意を持ってないのに過度に好意を示すのは怖い。悪意を隠さないといけない。
 
 嫉妬や独占欲を見せるのは好意を示している。でもべつに本気である必要はない。逆に表に出ない嫉妬は意味がない。
+
+人懐っこくて好意を示すのは、お互いに好意があるとさらに距離が縮まる。
