--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -293,3 +293,5 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 まず息の圧を声帯にかけて、それからゆっくり声帯を開いていく練習。
 
 地声を鍛える場合でもあまり声が重くなりすぎないようにしたい。良い出し方で、重い声も軽い声も出せるようにする。
+
+腹から声を出す場合、息はいきなりマックスにはならないので、声帯を閉じて息の圧だけ高めて声は出さないようにするか、素早く腹に力を入れる。
