--- a/shared/thinking/考え方.md
+++ b/shared/thinking/考え方.md
@@ -4,6 +4,8 @@
 - どうしてそうなったか
 - 何がきっかけか
 - 何が決め手か
+- やりたいこと
+- なりたいもの
 
 考えたことがないことは、聞かれてもわからない。
 そうなると、相手にいきなり許可をとるのは意味がなくて、まず試してみて、良かったか悪かったかを聞くしかない。
