--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -1024,3 +1024,12 @@ loveとgoodの概念は近い。
 「つまらない」と思わないこと。
 
 比較しない。評価しない。「つまらない」ものとして扱わない。
+
+ある種の信頼かも。
+まずは「おもしろいだろう」と期待する。
+
+つまらないものとして見ないのはふつうは信頼や期待があるから。
+でも、前提なしに愛することもできる。
+なんの信頼もなくても、なんらかの恩恵はある、と仮定して行動する。
+
+愛が行為である以上、能動的であるべき。
