--- a/shared/care/attention/tips/関心を持つ.md
+++ b/shared/care/attention/tips/関心を持つ.md
@@ -1,3 +1,5 @@
+関心を持つ。注意を払う。
+
 「謙虚さ」の要素に近い。
 
 相手に関心を持っていないと、関心を示しても薄っぺらくなりがち。
@@ -40,3 +42,20 @@ LoveよりもCareが先。注意して見る。
 - 打算による関心
   - 機能
   - 財産
+
+関心を持つ。
+
+注意を払うというのは、重要なものだとみなして、より深く知ろうとすること。
+
+感謝する、歓迎するためにも注意を払わないといけない。
+
+「やばい」という言葉はポジティブでもネガティブでも使われる。
+肯定でも承認でもないけど、注目はしている。
+
+誰かに注意を払うということは、幸せになってもらうこと。楽しんでもらうこと。
+
+目移りするということは、目を離している。
+
+それが「ある」ことを知らないと注意も払えない。
+
+注意には、動きを予測する、先読みするのも含まれる。
