--- a/shared/care/attention/関心.md
+++ b/shared/care/attention/関心.md
@@ -182,3 +182,7 @@ careの関心は注意の方が近いかも。mindとも近い。
 
 人と一緒にいる時に人から目を離すのは、人よりもそれ以外に関心が向いてしまっている。
 周りじゃなくて、一緒にいる人に目を向ける。
+
+関心と興味は少し違う。
+関心は目を向ける、離さないこと。
+興味は知ろうとすること。
