--- a/shared/care/attention/tips/目を向けさせる.md
+++ b/shared/care/attention/tips/目を向けさせる.md
@@ -66,20 +66,33 @@
 
 意識的に注意を引く方法:
 
+総合的:
+
+- 歩み寄る
+- 走り寄る
+- 立ち上がる
+- 地団駄を踏む
+
+視覚的:
+
 - 特殊な格好をする
+- 手を振る
+- 手を挙げる
+- 腕を広げる
+- 動きに緩急をつける
+- 大きな動きを見せる
+
+聴覚的:
+
 - 名前を呼ぶ
 - 声をかける
-- 手を挙げる
-- 手を振る
-- お礼を伝える
-- 走り寄る
-- よく通る声を発する
-- 動きに緩急をつける
-- 立ち上がる
-- 腕を広げる
 - 台を叩く
 - 手を叩く
-- 地団駄を踏む
+- よく通る声を発する
+- 大声を出す
+
+触覚的:
+
 - 肩を叩く
 - 服や手を引っ張る
 
@@ -95,3 +108,7 @@
 スポーツやゲームでもプロのプレイヤーに強さは必須ではないが、強いと注目されやすい。
 
 相手の注意を引くのにユーモアやエンタメの感覚は重要。
+
+- お礼を伝える
+
+目立つ、というべきかも。
