--- a/shared/mood/happy/praise/褒める.md
+++ b/shared/mood/happy/praise/褒める.md
@@ -140,3 +140,12 @@ pleasure.
 
 褒めるのは、相手に好かれてから。
 好きでもない人に褒められても裏があるのかと思う。
+
+褒めのポイント
+
+自分との相性を褒める。（私たち二人だとすぐ予定決まるね、とか）
+ネガティブな考えをポジティブに変えて褒める。
+未来の可能性を褒める。
+
+特別さを強調する。
+期間を強調する。
