--- a/shared/music/音楽.md
+++ b/shared/music/音楽.md
@@ -69,3 +69,9 @@ https://youtu.be/69b0XDX6Mi0?si=SWd-QIton1VpDiHd
 楽譜には歌詞も含まれる。
 
 楽譜が同じでも演奏が違ったらまた違う曲になる。
+
+なんらかの秩序が音と音につながりを作る。
+
+間も、繋がりがあるからこそ間と言える。そもそも繋がりがなかったら間と言わない。ただのカオス。
+
+音楽は音のつながりで、音がつながってないものは音楽ではない。
