--- a/shared/popular/好感度.md
+++ b/shared/popular/好感度.md
@@ -38,3 +38,5 @@ favor には「特別扱いする、贔屓する」意味がある。
 
 信頼と同じものかも。
 安心感を与えるのも、好感を与えるのも信頼の延長かも。
+
+会社を抜けたりしたあと、退社後、契約終了後にどこかで活躍している人を応援するのは好感度が高い。球団を移籍した選手のお祝いに花を贈るとか。
