--- a/shared/talk/前置き.md
+++ b/shared/talk/前置き.md
@@ -1,16 +1,20 @@
 # 前置き
 
-「厳しいことを言うようだけど」
-「アドバイスとして聞いてほしいんだけど」
-「オチがないんだけど」
+- 厳しいことを言うようだけど
+- アドバイスとして聞いてほしいんだけど
+- オチがないんだけど
+- これ言っていいかわからないんだけど
+
 みたいな枕詞で相手に覚悟や拒絶の時間を与えるのも気遣い。最初に結論を言うのと近い。話のオチを先に伝えている。
 
-「XXXの話に戻るんだけど」
-
-「これ言っていいかわからないんだけど」
+- XXXの話に戻るんだけど
 
 話が長くなるなら前置きする。
 「説明するのは難しいけど」とか「少し長くなるけど」とか。
+
+- 説明すると長くなるけど
+- ちょっと言葉にするのが難しいんだけど
+- 少し長くなるけどいい？
 
 「嫌味なこと言っていい？」みたいな枕詞を言うべきかどうか。そもそも嫌味なことを言うべきかどうか。
 
@@ -23,5 +27,12 @@
 
 枕詞で「どういう反応をしてほしいか」を伝えることもある。例えば「意外かもしれないけど」だったら、驚いてほしい。
 
-- 説明すると長くなるんだけど
+相手の反応を限定する:
+
 - 意外かもしれないけど
+
+褒めるときは、
+
+- 前から思ってたんだけど
+
+とか。
