--- a/shared/influence/people/人を動かす.md
+++ b/shared/influence/people/人を動かす.md
@@ -52,3 +52,9 @@ SNSなどで間接的に情報を得て影響を受けることもある。
 他人が自分に何をしてくれるか。
 
 どのように動かすか。
+
+何かを「するな」と言うのは怒りの感情。
+怒りの感情は相手にきっちり害を与える期待感がないと通じない。
+
+対して何かを「しろ」と言うのは喜びの感情。
+褒めるだけでも通じる。
