--- a/shared/communication/media/language/languages/english/英語の特徴.md
+++ b/shared/communication/media/language/languages/english/英語の特徴.md
@@ -10,3 +10,5 @@ https://youtube.com/watch?v=tv9FWg51xww&si=NHe5uMUR6LZJGqVU
 日本語で「私は彼らに見つかった」というところも、「彼らは私を見つけた (They found me)」という。
 
 日本語の癖で受動態を使って考えていたら一旦能動態に直した方がいい。主語と述語を入れ替える。
+
+日本語と比べると、母音がそもそも多い。
