--- a/shared/communication/media/language/languages/japanese/日本語の文法.md
+++ b/shared/communication/media/language/languages/japanese/日本語の文法.md
@@ -19,3 +19,6 @@
 日本語や中国語の先頭にあるのは、主語というよりも主題。
 
 日本語の主語は主体というよりもその分のテーマ。
+
+日本語で「何があったの？」みたいな質問をする時の主語は暗黙的に「それは」だから、質問の時に「は」を使うことは少ない。
+明示的に「あなたの地元では何が流行ってたの？」みたいに主語を変える時だけ「は」が入る。
