--- a/shared/government/統治の要素.md
+++ b/shared/government/統治の要素.md
@@ -17,3 +17,17 @@
 階層を作った方が統治には便利。上位の統治者が見る範囲を簡単に区切って分担できる。国民の教育レベルが上がって統治に手間がかからなくなったら役所みたいに簡易な機能だけで足りる。
 
 統治の基本はルールと命令系統を作って、トップが全体に目を配らなくても分担して目を配れるようにすること。
+
+- 内政
+  - 立法
+    - 選挙
+  - 司法
+  - 行政
+    - 治安
+    - 経済
+- 外交
+  - 戦争
+    - 軍隊
+    - 兵器開発
+  - 貿易
+    - 経済競争
