--- a/shared/care/attention/tips/関心をひく.md
+++ b/shared/care/attention/tips/関心をひく.md
@@ -1,8 +1,58 @@
-目をひく。
-目を向けさせる。
-関心をひく。
-注意をひく。
-目立つ。
+目をひく。目を向けさせる。関心をひく。注意をひく。目立つ。
+
+## 意識的に注意を引く方法
+
+総合的:
+
+- 歩み寄る
+- 走り寄る
+- 立ち上がる
+- 地団駄を踏む
+
+視覚的:
+
+- 特殊な格好をする
+- 手を振る
+- 手を挙げる
+- 腕を広げる
+- 動きに緩急をつける
+- 大きな動きを見せる
+- 顔の好み
+- 服の好み
+- 所作が美しい
+
+聴覚的:
+
+- 名前を呼ぶ
+- 声をかける、呼びかける
+- 台を叩く
+- 手を叩く
+- よく通る声を発する
+- 大声を出す
+
+触覚的:
+
+- 肩を叩く
+- 服や手を引っ張る
+
+## その他
+
+注意を引くための前置きにはどんなパターンがあるか。
+
+注意を引いたと認識するには？
+目が合うのが基本。
+
+複数人で話す時は特に注意が向いてないと聞き逃しやすい。
+
+有名だったり人気だったりするのはそれだけで興味を引く。
+
+スポーツやゲームでもプロのプレイヤーに強さは必須ではないが、強いと注目されやすい。
+
+相手の注意を引くのにユーモアやエンタメの感覚は重要。
+
+- お礼を伝える
+
+目立つ、というべきかも。
 
 個性があると関心を惹きやすい。
 
@@ -59,58 +109,3 @@
 特殊な格好は単純に目を引きやすい。
 
 所作が美しいとか、動作でも注意を引ける。
-
-気になること:
-
-- 顔の好み
-- 服の好み
-- 所作が美しい
-
-意識的に注意を引く方法:
-
-総合的:
-
-- 歩み寄る
-- 走り寄る
-- 立ち上がる
-- 地団駄を踏む
-
-視覚的:
-
-- 特殊な格好をする
-- 手を振る
-- 手を挙げる
-- 腕を広げる
-- 動きに緩急をつける
-- 大きな動きを見せる
-
-聴覚的:
-
-- 名前を呼ぶ
-- 声をかける
-- 台を叩く
-- 手を叩く
-- よく通る声を発する
-- 大声を出す
-
-触覚的:
-
-- 肩を叩く
-- 服や手を引っ張る
-
-注意を引くための前置きにはどんなパターンがあるか。
-
-注意を引いたと認識するには？
-目が合うのが基本。
-
-複数人で話す時は特に注意が向いてないと聞き逃しやすい。
-
-有名だったり人気だったりするのはそれだけで興味を引く。
-
-スポーツやゲームでもプロのプレイヤーに強さは必須ではないが、強いと注目されやすい。
-
-相手の注意を引くのにユーモアやエンタメの感覚は重要。
-
-- お礼を伝える
-
-目立つ、というべきかも。
