--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -132,3 +132,6 @@
 お礼をするよりも、なんの関係もなくお土産を買ってきたり、プレゼントしたりする方が相手に気負わせない。
 
 気遣いがそもそも上から目線って部分もある。ただ、獣に対しての防衛という面もある。まぁ、殺せば済むなら無理に気遣わなくてもいい。
+
+気遣い自体は好き嫌いと関係ない。
+むしろ嫌いな人がどうしても近くにいる場合に爆弾処理することもある。上司とか。
