--- a/shared/game/ゲーム.md
+++ b/shared/game/ゲーム.md
@@ -122,3 +122,9 @@ gameはworkと違って、何も変えないこともある。
 ゲームで大事なのが、詰みを逃さないこと。
 
 ゲームで一旦資源や資金を集めることに集中するターンを「しゃがむ」と言うことがある。
+
+上手い、下手、もゲームの文脈の面もありそう。技術もゲーム？
+技術はゲームを攻略するための手段の一つ。
+
+ゲームはうまくやるもの。
+うまくやれば結果が出る。より良い方法の模索。
