--- a/shared/intimacy/tips/好意を示す.md
+++ b/shared/intimacy/tips/好意を示す.md
@@ -8,3 +8,10 @@
 嫉妬や独占欲を見せるのは好意を示している。でもべつに本気である必要はない。逆に表に出ない嫉妬は意味がない。
 
 人懐っこくて好意を示すのは、お互いに好意があるとさらに距離が縮まる。
+
+- 興味を示す
+- 関心を示す
+- 近寄る
+- 帰ろうとするのを引き止める
+
+帰る理由を言わない方が引き止めやすい。
