--- a/shared/politics/tips/マウント.md
+++ b/shared/politics/tips/マウント.md
@@ -3,3 +3,6 @@
 「運とか他人のおかげにする」のはマウントとして受け取られるのを避けているのかも。
 幸せなことがあった話について、とくに何もフォローしないと、マウントとして受け取るサルとそうでない人がいる。
 例えば「IT業界は給料いいからね」みたいな話をした時とか。
+
+優劣自体は勝ち負けの文脈。
+優位に立とうとするのは、人間関係を勝ち負けで見ている。ゲームだと思ってる。
