--- a/shared/care/面倒を見る.md
+++ b/shared/care/面倒を見る.md
@@ -22,3 +22,7 @@
 面倒を見るのは、責任を持つのと関連する。
 
 トイレの芯が残ってるとか、ちょっとしたことで怒るのは、「相手がやるべきこと」だと思っているから文句が出る。まずは「全部自分がやる」つもりで人と接する。自分が全てに責任を負う。その上で、文句を言うのではなく、「これやっといたよ、褒めて」みたいに冗談めかしてアピールするのもいい。ただ、自分の価値観の深いところに繋がるような重いこととか、あまりにも手間がかかることであれば、しっかりと話し合う。どうでもいいことはスルーでいい。
+
+愛があるからこそ面倒を見る、世話をする、という面もある。
+
+実験とか観察対象としての愛はモルモットというよりも実験そのものへの愛。
