--- a/shared/thinking/考え方.md
+++ b/shared/thinking/考え方.md
@@ -1,11 +1,15 @@
 # Thinking
 
-- どうしてそうしたか
-- どうしてそうなったか
-- 何がきっかけか
-- 何が決め手か
-- やりたいこと
-- なりたいもの
+- 過程
+  - どうしてそうしたか
+    - 何がきっかけか
+    - 何が決め手か
+  - どうしてそうなったか
+- 理想
+  - やりたいこと
+    - どうしたいか
+  - なりたいもの
+    - どうなりたいか
 
 考えたことがないことは、聞かれてもわからない。
 そうなると、相手にいきなり許可をとるのは意味がなくて、まず試してみて、良かったか悪かったかを聞くしかない。
