--- a/shared/care/attention/関心.md
+++ b/shared/care/attention/関心.md
@@ -186,3 +186,9 @@ careの関心は注意の方が近いかも。mindとも近い。
 関心と興味は少し違う。
 関心は目を向ける、離さないこと。
 興味は知ろうとすること。
+
+関心があってもしっかり観察できてないと何をしたらいいかわからない。
+遠慮して目を逸らしてしまうとか。
+
+関心は、対象を知ることそのものよりも、対処を知るためのもの。
+観察やコミュニケーションで情報を集める。
