--- a/shared/care/面倒を見る.md
+++ b/shared/care/面倒を見る.md
@@ -1,5 +1,8 @@
 誰かの面倒を見る。手間をかける。
 
+- 気配り
+- 気遣い
+
 余裕がないと世話できない。自分で精一杯。
 
 世話は面倒なもの。
@@ -26,3 +29,5 @@
 愛があるからこそ面倒を見る、世話をする、という面もある。
 
 実験とか観察対象としての愛はモルモットというよりも実験そのものへの愛。
+
+面倒を見るために何を知ればいいか。
