--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -2,6 +2,8 @@
 
 愛。
 
+良いところを見つけようとすること。
+
 愛とは、対象から影響を受けることに喜びを覚えること。
 
 愛が変化への抵抗を小さくする。
@@ -1035,3 +1037,6 @@ loveとgoodの概念は近い。
 愛が行為である以上、能動的であるべき。
 
 愛は相手に価値を与える。
+
+愛は深まる。
+好きなところを見つけることでより好きになって、さらに好きなところを見つけられる。
