--- a/shared/thinking/思考を広げる.md
+++ b/shared/thinking/思考を広げる.md
@@ -1,3 +1,5 @@
+# 思考を広げる
+
 思考を広げるときは、抽象と具象、近くと遠くのような軸を行ったり来たりするのが重要。
 さまざまな観点を持つことで、疑問が生じる。
 
@@ -20,5 +22,6 @@
 
 思考を広げる。
 
-- 「それとも」: 別の可能性
-- 「逆に」: 対立する概念
+- 逆に？: 対立する概念
+- 他には？: 別の可能性
+- あるいは？: 別の可能性
