--- a/shared/commerce/sales/価格交渉.md
+++ b/shared/commerce/sales/価格交渉.md
@@ -10,3 +10,10 @@
 顧客には赤字ラインを知られてはならない。
 
 絶対に取引のうち一つくらいは価格交渉があるので、初めからある程度盛ってないと値引きできない。
+
+企業の代表として、顧客とお金の話をするには、何が必要か。
+
+- 作業期間ごとに関係する社員一人当たりのコスト
+- 最低限の利幅
+
+他には？
