--- a/shared/collaboration/team/チームの扱い.md
+++ b/shared/collaboration/team/チームの扱い.md
@@ -18,3 +18,11 @@
 
 チームのパフォーマンスが高くなったら、意志決定も変えないといけない。
 計画に時間をかけて作業を絞るよりも、さっさと決めて検証した方がいい。チームのパフォーマンスに任せる。まぁ、あまり方向転換ばかりだとついてこないけど。
+
+チームは一人よりもコストの単位が大きいので、スケジュールが空いてしまうと機会損失も大きい。
+
+大きな個として扱えないならチームとは言えない。
+チームの一人だけがスポットで別の作業に取られるとか。
+エンゲージメントも下がるし、タスクの割り振りも余計な判断が必要になる。
+
+スクラムチームの窓口、顔役はScMにするべきか、PdMにするべきか。
