--- a/shared/management/performance/マルチタスク.md
+++ b/shared/management/performance/マルチタスク.md
@@ -17,3 +17,5 @@
 複数のタスクを切り替えながら処理する場合、まずは計画を立てて、コンテキストスイッチを減らさないと効率が悪い。そもそも一つのタスクが終わってないのに切り替えるのは待ち時間を減らして効率を良くするためなので、より効率が良い方法を選ばないと意味がない。
 
 タスクは作業の単位であって、一度に一つの作業をしているなら、処理待ちのタスクが複数あってもマルチタスクとは言わない。
+
+1ヶ月かかる仕事が2つあったら、まとめてやると普通は2ヶ月半から3ヶ月かかる。
