--- a/shared/perception/解像度を高める.md
+++ b/shared/perception/解像度を高める.md
@@ -14,4 +14,15 @@
 学べば学ぶほど解像度が高まる。
 ただ、その分だけ複雑になるとそれはそれでわからなくなる。
 
+- 明確
+- 簡潔
+- 理解しやすい
+- 状況を深く知っている
+- 事例が多い
+
 解像度が低いのは深掘りが足りない。
+
+- 議論の見通しが悪い
+- 言葉が曖昧
+- 論点がはっきりしない
+- 十分に理解できていないと感じる
