--- a/shared/achievement/problem/solving/問題解決.md
+++ b/shared/achievement/problem/solving/問題解決.md
@@ -57,3 +57,6 @@ https://qiita.com/jofuku/items/6420097fd5ff4c44c24d
 選挙なんかでも喫緊の課題が多いと考えていると、政党の公約も短期的なものが増える。
 
 問題解決では「次にどうするか？」が重要。過去の事象や原因を探るのも対策を考えるためでしかない。過去を悔やむのは無駄。
+
+解決を考える前に、問題について深掘りする。
+解決策は問題の理解度よりも良いものにはならない。
