--- a/shared/achievement/task/タスク.md
+++ b/shared/achievement/task/タスク.md
@@ -41,3 +41,7 @@ https://qiita.com/ogix/items/fc493a0775900e02fbca?utm_source=Qiitaニュース&u
 タスク管理はタスクが必要になるまで忘れるためにある。忘れられないならタスク管理できているとは言えない。
 
 重要だけど緊急ではないタスクが一番楽しいところ。
+
+タスクは作業、executionの文脈でもいいかも。
+
+課題や問題をもとに具体的なタスクや包括的なプロジェクトを作る。
