--- a/shared/care/responsibility/責任.md
+++ b/shared/care/responsibility/責任.md
@@ -137,3 +137,5 @@ https://youtu.be/TH0ZiPNkddQ?si=ejD2IH1dFfaVBjmv
 責任は基本的に自分の話なんだけど、エンゲージメントでは家族や恋人にも責任を広げる。
 
 お店は偉大。やはりお金を払わないと責任を伴う仕事にならない。お店にお金を払って品質を保証してもらう。
+
+他人のことは自分に関係ないのでどうとでも言える。
