--- a/shared/mood/気分を上げる.md
+++ b/shared/mood/気分を上げる.md
@@ -13,6 +13,7 @@
   - 相手のために身なりを整える
   - 相手の話したことややったことを覚えている
   - 誰かから必要とされる
+  - 相手のためにお金を使う
 - 相手に理解されていると感じる
 - 安心する
 - 相手を信頼している
@@ -117,3 +118,5 @@
 
 - 笑顔で楽しそうに話を聞く
 - 名前を呼ぶ
+
+気晴らしや息抜きとも近い。
