--- a/shared/job/hunting/職場を選ぶ.md
+++ b/shared/job/hunting/職場を選ぶ.md
@@ -14,13 +14,21 @@
 
 ## 給与
 
+ほとんどの問題は給与が高かったらどうにでもなる。どんな条件も金次第。
+例えば年に2000万円もらってたらなかなか辞める人はいない。
+
 給与は内訳まで見る。
 変な手当が入ってると怪しい。
 みなし残業は残業ゼロならむしろいい。残業の実績次第。
 
+給与が高いと上司や同僚の質もある程度絞られるし、会社にも稼ぐ力がないと支払えない。仕事も無駄なことをしてると稼ぎが足りないので絞られる。
+会社や仕事、上司、同僚の質を担保したいなら、要求する給料水準を上げればいい。
+
 ## 勤務時間
 
 Full-time と Part-time がある。
+
+残業が多い会社は経営者や上司の計画性も社員の能力もない。
 
 ## 出勤頻度
 
