--- a/shared/logic/理解.md
+++ b/shared/logic/理解.md
@@ -43,3 +43,10 @@ https://youtu.be/89Kbf7aXMx0?si=oyRo-lWqOFmHSnp4
 人間は全知ではないし、時間にも限りがある。
 
 理解するには、属性を分けていく。様々な切り口がある。
+
+構造やモデルとその変化を明らかにすることで理解しやすくなる。
+そもそも理解とは構造や筋道のことなので、初めからはっきりしていればそれ以上考えなくても理解できている。
+
+マインドマップ的な広さと深さのある構造と、その変化をモデリングするのが基本。
+
+理、筋道を解する。
