--- a/shared/market/市場.md
+++ b/shared/market/市場.md
@@ -7,3 +7,8 @@
 市場というのは、顧客の集まり。
 
 重要なのは、顧客がどれくらいいるか。
+
+需要があるのに供給が足りない市場を見つけると商売にしやすいけど、なかなか残っていない。
+需要を新たに生み出すことができれば、自然とそのような市場になる。
+
+狭い市場はコネとか特殊なアクセスが必要になりがち。
