--- a/shared/communication/media/language/具体的な言葉.md
+++ b/shared/communication/media/language/具体的な言葉.md
@@ -9,3 +9,7 @@
 言葉が抽象的になるほど誰にでも汎用的に使えるけど、細かいニュアンスは抜けがち。
 
 言葉が抽象的になるほど説得力がない。
+
+数字などの指標やデータがあると具体的になりやすい。
+抽象的な理論だけでなく、具体的な事例を集める。
+「明るいよね」よりも「初めて来た人に積極的に声かけててすごいね」とか。
