--- a/shared/entertainment/examples/落語.md
+++ b/shared/entertainment/examples/落語.md
@@ -1,3 +1,14 @@
+## 文化の違い
+
+- 上方落語
+- 江戸落語
+
+## 制作時期の違い
+
+- 新作落語: 新たに創作されたもの
+- 改作落語: 新作を編集したもの
+- 古典落語: 何代も語り継がれてきたもの
+
 ## 落語ネタの類型
 
 - 言い立て
@@ -18,12 +29,18 @@
   - 『死神』
   - 『牡丹灯籠』
 
+## 真打の特徴
+
+- 弟子を取れる
+- トリを飾れる（その回の締めくくり）
+
 ## その他
 
 落語では一人で寄席を埋められるようなトップクラスの落語家を大看板という。
 
-寄席の料金に前座の分は含まれない。
-このようにお金をもらわずに修業する期間もありうる。
+寄席の料金に前座や前座見習いの分は含まれない。名前も載らない。
+
+一人前になるのは二つ目から。
 
 - 物語の性質
 - 主要な舞台
@@ -32,8 +49,6 @@
 
 「落ち」があるのが特徴。
 
-- 上方落語
-- 江戸落語
+落語は滅私の芸。噺の登場人物が主役。でもその上で個性が出る。
 
-- 古典落語
-- 新作落語
+新作落語がさまざまな人の改作を繰り返していって古典になっていく。
