--- a/shared/game/ゲーム性.md
+++ b/shared/game/ゲーム性.md
@@ -1,3 +1,11 @@
+- プレイヤーがいる
+- プレイヤーの判断や行動が促される
+- プレイヤーの能動的な介入によって結果が変わる
+- 状況に応じた判断が求められる
+- リスクリターンがある
+- 技術や思考、工夫が試される
+- など
+
 ゲームの醍醐味といえるルールややりがいを感じさせる要素を指して用いられることが比較的多い。
 
 ムジュラの仮面のゲームシステムの解説
