--- a/shared/entertainment/examples/落語.md
+++ b/shared/entertainment/examples/落語.md
@@ -28,6 +28,7 @@
 - 怪談噺
   - 『死神』
   - 『牡丹灯籠』
+- 三題噺: 即席で噺を作る
 
 ## 真打の特徴
 
@@ -52,3 +53,5 @@
 落語は滅私の芸。噺の登場人物が主役。でもその上で個性が出る。
 
 新作落語がさまざまな人の改作を繰り返していって古典になっていく。
+
+三題噺といって、お客さんからお題を三つもらって即席で作る話もある。
