--- a/shared/joke/フリとオチ.md
+++ b/shared/joke/フリとオチ.md
@@ -15,3 +15,6 @@
 何かが起きそうなところで、フラグを立てておく。
 
 大喜利で「三つ答えてください」みたいなお題は一つ目二つ目でフリを入れて、三つ目でオチをつけるのが基本。
+
+振りが上手いと次の落ちまでわかる。
+ただ、その通りに来ることもあるし、あえて外すこともある。どっちになってもうまく落ちる。
