--- a/shared/care/attention/関心.md
+++ b/shared/care/attention/関心.md
@@ -2,7 +2,7 @@
 
 関心、注目、注意。
 
-目を離さないこと。
+目を向けること、目を離さないこと。
 
 利があるか、害があるか、で対象を見る。
 
@@ -192,3 +192,5 @@ careの関心は注意の方が近いかも。mindとも近い。
 
 関心は、対象を知ることそのものよりも、対処を知るためのもの。
 観察やコミュニケーションで情報を集める。
+
+目を向けること、目を離さないことが関心の基礎。
