--- a/shared/collaboration/organization/hierarchy/上司.md
+++ b/shared/collaboration/organization/hierarchy/上司.md
@@ -97,3 +97,5 @@
 より重要な情報を扱う中枢の人間ほど口は硬くないといけない。
 
 上司は別に尊くない。役割として命令系統の上流というだけ。
+
+いわゆる上司の役割としてはPdMよりScMが近い。チームを裏側からサポートしてエンゲージメントやパフォーマンスを高める。作業はPdMとチームが決めてかなり自律的に動く。
