--- a/shared/music/theory/レガート.md
+++ b/shared/music/theory/レガート.md
@@ -49,3 +49,5 @@ https://youtube.com/watch?v=W8YRZxnuz38&si=1DEYRJooIiMs_H5u
 まずはリズム感がないと簡単にレガートが崩れてしまう。リズムが全ての音楽の基礎。
 
 高さの異なる音を滑らかに繋ぐ音楽表現をスラーという。
+
+韻を踏むとそれ自体がレガートを構成する部品になる。発音とアクセントの類似性がリズムになる。
