--- a/shared/business/corporation/tips/リモートワーク.md
+++ b/shared/business/corporation/tips/リモートワーク.md
@@ -44,3 +44,13 @@ https://x.com/kakkokka/status/1836562345688207815
 > オンラインミーティングでもチャットでも常に発言してるような人がリモートワーク向きです
 >
 > https://x.com/suthio_/status/1967478282347233360?s=12
+
+リモートワークのコツは、オフィスの機能を理解して、それをある程度自力で補うこと。
+全部は無理だけど、とくに重要なのが、必須ではないけどあると便利な情報を積極的に集めること。オフィスでは周りの情報が自然と入ってくる。周りで話していることとか、直接人に会ってその体調とか疲れ具合とか。
+あとは気遣いとか、仕事とかで積極的に信頼関係を築く。とくに上司や同僚への報告は積極的にして、自分の働きが見えるようにしてあげる。オフィスだと「頑張ってるな」ってわかるけど、リモートだと成果以外が見えづらい。成果報告よりも「これやってたんだけどうまくいかなかったです。誰か詳しい人いますか？」みたいな報告が一番大事。
+
+雑談に誘う、
+DMを使わずにオープンチャットでやりとりする、
+日報を上げる、
+そもそもリモートの課題と対策をプレゼンする、
+とか。
