--- a/shared/human/body/muscle/training/筋トレの負荷を調整する.md
+++ b/shared/human/body/muscle/training/筋トレの負荷を調整する.md
@@ -1,2 +1,10 @@
-自分の筋力に合った負荷にしないと怪我する。
-弱すぎるとトレーニングにならない。
+- 荷重が多いほど負荷が高い
+- セットが長いほど負荷が高い
+- セットの間隔が短いほど負荷が高い
+
+自分の筋力に合った負荷にしないと怪我する。特にウェイト、荷重はウェイトに踏まれる事故もあるので気を付ける。
+
+筋トレのセットの間の休憩は30秒が基本。30秒で回復しなかったら1分あってもいい。
+休憩が短い方が負荷が高い。
+
+最初はとにかく楽な方法でも、やらないよりはいい。
