--- a/shared/lifestyle/clothing/服.md
+++ b/shared/lifestyle/clothing/服.md
@@ -59,3 +59,5 @@
 服は結局洗濯するたびにほつれて伸びていくので、安いのをこまめに買い替えたほうが綺麗ではある。特に綿。コートとかほとんど洗濯しないものは別だけど。
 
 衣服は美しさ以外に着心地や季節感、TPO、などの面もある。
+
+良しとされる服装には流行りがあるけど、最前線のファッションじゃなくて普通に10年単位の流行りで十分。スーツとか。
