--- a/shared/management/マネジメント.md
+++ b/shared/management/マネジメント.md
@@ -433,3 +433,5 @@ maintenanceやfinanceも含む。
 マネジメントは楽そうに見えてないなら失敗している。失敗したマネジメントはやたらとマネジメントが働かないといけない。準備は済んでいて、少し指示するだけで順調に進むのが良いマネジメント。
 
 問題をなんとかする方法としては、とにかく時間や手間をかける方法もある。それもマネジメントではある。でも他の方法を選べるなら避けたほうがいい方法でもある。
+
+マネジメントはゲームの要素があるけど、ゲームのように「うまくやる」ことを目指すよりは「目の前の問題をなんとかする」のが本領。うまくやれたらなおいい、くらいの気持ち。
