--- a/shared/singing/tips/曲を覚える.md
+++ b/shared/singing/tips/曲を覚える.md
@@ -161,3 +161,6 @@
 6. 子音も載せて歌う。
 
 英語の歌詞もまずはアクセントが乗る位置を覚えていって、そこだけでも正しく発音していくとそれっぽくなってくる。
+
+メロディーよりも細かい抑揚を覚えるのが先。テンポやアクセントは当然として、フレーズごとの強弱の波とか、フレーズ終わりの区切りとか。
+変拍子にも気をつけないといけない。変調はメロディーよりも前に抑揚の問題。
