--- a/shared/trust/tips/信頼される喋り方.md
+++ b/shared/trust/tips/信頼される喋り方.md
@@ -18,3 +18,7 @@ https://youtu.be/jvLZanmDTcM?si=k-vbNn7lx-4ebQxk
 
 信頼関係を築く前に相手のことを聞くのは時期尚早。
 まずは自分のことを話したり、目の前にあるもののことを雑多に話したりするといい。
+
+文章のつなぎになる助詞や文末は伸ばさずにはっきりと区切った方がハキハキして明るい印象になる。しっかり間が取れるスタッカートが大事。
+
+- フレーズの終わりを間延びさせずにはっきりと切る（間をとる）
