--- a/shared/human/body/muscle/training/exercises/腕立て伏せ.md
+++ b/shared/human/body/muscle/training/exercises/腕立て伏せ.md
@@ -40,14 +40,15 @@
 
 1. ゆっくり胸を床に下ろすだけ
 2. 膝をつく
-3. ダイヤモンドプッシュアップ
-4. リーンプッシュアップ
-5. パイクプッシュアップ
-6. リーンムーブ or ショルダータッチプッシュアップ
-7. サークルプッシュアップ
-8. ナロープッシュアップ
-9. ヒンドゥープッシュアップ
-10. ショルダータッチパイクプッシュアップ
+3. 普通の腕立て伏せ
+4. ダイヤモンドプッシュアップ
+5. リーンプッシュアップ
+6. パイクプッシュアップ
+7. リーンムーブ or ショルダータッチプッシュアップ
+8. サークルプッシュアップ
+9. ナロープッシュアップ
+10. ヒンドゥープッシュアップ
+11. ショルダータッチパイクプッシュアップ
 
 [【たった 10 回】騙されたと思って 30 日間この筋トレを試してみてください。 - YouTube](https://youtube.com/watch?v=52xzTBcO6eQ&si=stx95a5PmeSTsLeF)
 
@@ -57,3 +58,14 @@
 
 腕立ての負荷を調整する場合、まず膝をつくと負荷が軽くなる。
 それでも決まった回数達成できなければ、上下させるんじゃなくて、ゆっくりと下ろして胸を床につくだけにする。
+
+連続腕立て伏せの回数の目安
+https://youtube.com/shorts/aT50_SS68sU?si=wmzwM8P4DBMwjV2O
+
+- 0-10: トレーニングしてない
+- 15-25: 一般人
+- 30-45: トレーニングに慣れている
+
+10回もできなかったら負荷を下げる。膝をつくとか。
+連続回数はとりあえず10回を目指して、慣れたらさらに30回を目指す。
+さらに負荷を上げる工夫をするのは普通のプッシュアップが連続30回を超えてからでいい。
