--- a/shared/respect/empathy/共感.md
+++ b/shared/respect/empathy/共感.md
@@ -139,26 +139,9 @@
 
 肯定するだけじゃなくて、相手の感じ方を言葉にする。
 
-「よかったね」
-「おいしいね」
-「嬉しいね」
-「楽しいね」
-「嫌だったね」
-「困ったね」
-「つらかったね」
-「痛かったね」
-「怖かったね」
-「殺してやりたいね」
-
-うーん、「大変だね」はまた違う気がする。共感というより、事実？
-
 感じ方を言葉にすることでそう感じるようになる面もあるかも。特に感情を言葉にするのが苦手な子どもとか。
 
-「でっか」
-「あっつ」
-
-とかも共感かも。
-あまり過度な感情を示すと「そ、そこまでは思ってないけど」
+あまり過度な感情を示すと「そ、そこまでは思ってないけど」になる。
 
 共感は言葉にするのが大事。相手の感じ方を言い当てに行く。
 
