--- a/shared/intimacy/親しさの発達段階.md
+++ b/shared/intimacy/親しさの発達段階.md
@@ -12,7 +12,7 @@
 5. 腕から肩 → 腕や脚の接触、肩組み、腕組みなど
 6. 腕から腰 → 腰を抱く、ハグなど
 7. 口から口 → キス
-8. 手から頭 → 頭をなでる
+8. 手から頭 → 頭をなでる、耳や頬を触る
 9. 手から体 → わきをくすぐる、首、尻や腿を触るなど、前戯の始まり
 10. 口から胸 → 前戯
 11. 手から性器 → 挿入を伴わないセックス、セックスの代替行為
