--- a/shared/intimacy/誰かと親しくなる.md
+++ b/shared/intimacy/誰かと親しくなる.md
@@ -263,3 +263,5 @@ https://www.total-marriage.com/column/1644/
 自分のことを好きな人にはより効果的な対応をした方がより親しくなれる。
 
 親しくなる前に、まず好かれること。
+
+異性とばかり親しくなろうとするのは怪しい。作為的に感じる。
