--- a/shared/care/attention/関心.md
+++ b/shared/care/attention/関心.md
@@ -196,3 +196,12 @@ careの関心は注意の方が近いかも。mindとも近い。
 目を向けること、目を離さないことが関心の基礎。
 
 思考に沈んだり、人以外のものに目を向けたりすると人を見る時間が足りてない。
+
+目を離さないのが大事で、特に相手の振る舞いや変化を見るのが大事。動的な部分。興味とか好意とかどうでもいい。
+
+あなたを見ている。
+あなたのそばにいる。
+あなたを大切にしている。
+
+興味は好感や親近感がベースだけど、関心は違和感がベース。
+違和感がある、気になる、というのがベース。
