--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -270,3 +270,5 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 
 失敗談を話した方がいいのは、ユーモアがあるから。
 失敗談を整理したのが滑稽話。
+
+優れたところを見せたいなら、肩書きや実績を誇るよりもユーモアを見せる。
