--- a/shared/joke/冗談.md
+++ b/shared/joke/冗談.md
@@ -19,3 +19,6 @@ AIに面白いことを喋らせられるか。
 
 「ふふふ、マウントしていきますよ」みたいにマウントもジョークにすると、マウントしているように見えない。
 世の中にはマウントされてなくてもマウントされたと感じる人がいるのでその予防。
+
+前もって準備したもので笑わせる方がむしろ難しい。
+その場の状況に合わせた、タイミングが合ったジョークの方が笑いやすい。
