--- a/shared/perception/modeling/モデリング.md
+++ b/shared/perception/modeling/モデリング.md
@@ -58,3 +58,13 @@ meaning や naming もモデリングの一部かも。
 同じ対象でも視点や粒度の違う複数のモデルを作ることもある。
 
 何かを理解する際にモデルとして捉える。
+
+モデリングでまず考えるべきなのが機能と構造。
+あと構造の中にある要素と関係。
+
+システムとモジュールと考えてもいいかも。
+機能を生み出している機構とその部品。
+
+機能がない場合もある。
+
+モデルの考え方は認識全体に関わってくる。
