--- a/shared/perception/modeling/関係.md
+++ b/shared/perception/modeling/関係.md
@@ -1,11 +1,16 @@
 # 関係
 
 - 同一
-- 類似・相似
+- 類似
+- 相似
 - 裏表
 - 対極・逆
 - 対偶
-- 継承・親子
-- 前後・因果・原因と結果
+- 親子関係
+  - 継承
+  - 主従
+- 兄弟関係
+- 前後関係
+  - 順序
+  - 因果
 - 利用・委譲・目的と手段
-- 主従
