--- a/shared/perception/五蘊.md
+++ b/shared/perception/五蘊.md
@@ -5,10 +5,10 @@
 色受想行識の 5 つ。
 
 色: 感覚器官などの身体的な受信の層
-受: 感情の層
-想: 表象や概念の層。記憶や過去の事例との関連付け
-行: 意思の層
-識: 対象を分析する、思考や抽象の層
+受: 感情の層 (feeling)
+想: 表象や概念の層。記憶や過去の事例との関連付け (modeling)
+行: 意思の層 (meaning)
+識: 対象を分析する、思考や抽象の層 (naming)
 
 例えば桜を見る場合、
 視覚や嗅覚を用いた色、
