--- a/games/Street-Fighter/Six/characters/Blanka/対空.md
+++ b/games/Street-Fighter/Six/characters/Blanka/対空.md
@@ -7,6 +7,8 @@
 中バチカでも2260入るのでかなり大きい。
 当ててから溜めるのが間に合うので確実に追撃したい。
 
+ブランカはHK対空だけでマスター行ったまである。
+
 ## 6HP
 
 遠めの対空。発生も遅いし判定も弱いけど、空振りになりにくい。相打ちで無理やり落とす。バチカがあれば弱バチカがベスト。
