--- a/shared/business/examples/マネジメント業.md
+++ b/shared/business/examples/マネジメント業.md
@@ -6,3 +6,6 @@
 Vtuberって会社のブランドもあるけど、結局は個人の才覚に依存してるから独立しやすい分野ではある。
 
 ホロライブみたいに、看板が大きくなりすぎると逆に小さな会場のライブに人が回せなくなって大きな会場のライブしかできなくなることもある。トップ層のタレントばかりにリソースが割かれて、小さな会場でライブしたいタレントとか、ニッチな要求には対応できなくなってタレントが離脱してしまうこともある。
+
+ホロはタレントが顔で、タレントに食わしてもらってる、という意識を社員全員が共有できてるかどうか。
+内部的にはゲームやVRの会社という認識もありそう。
