--- a/shared/finance/財務.md
+++ b/shared/finance/財務.md
@@ -72,3 +72,6 @@ business だけでなく、community でも finance は必要。
 何らかの活動を続けていく上で、financeが関係ない分野はない。
 
 ファイナンスはあらゆる活動に必要だけど、あくまでも付随的なものでしかない。活動を維持するための基盤。
+
+ファイナンスは常に手段でしかない。
+まぁ、資産を大きくするゲームとして捉えることもできるけど。
