--- a/shared/human/body/muscle/training/tips/脚を細くする.md
+++ b/shared/human/body/muscle/training/tips/脚を細くする.md
@@ -1,3 +1,6 @@
 脚を左右に広げて片足は曲げ、肩幅で手前に手をつく。
 左右に曲げる脚を入れ替えるのを繰り返す。
 https://x.com/nakisyozyo/status/2013507283955679420?s=12
+
+股関節を動かして太ももや尻を細くするトレーニング。
+https://x.com/nakisyozyo/status/2014541598990991462?s=12
