--- a/shared/music/theory/抑揚.md
+++ b/shared/music/theory/抑揚.md
@@ -1,4 +1,4 @@
-# 抑揚 Intonation
+# 抑揚
 
 リズムとメロディの変化のこと。
 完全な休止（間）も含む。調子の変化。
@@ -31,3 +31,33 @@ https://gigazine.net/news/20211130-music-negative-superstimulus/
 声が震えていると弱く聞こえるし、響きがなくても細く聞こえる。
 
 パートだけじゃなくて、フレーズごとにも抑揚がある。
+
+音楽的には緩急、強弱、高低が特に大きな抑揚。あとは声色を変えたりもあるけど、この三つが基本。
+
+- 緩急（テンポ）
+- 強弱（ストレス）
+- 高低（イントネーション）
+
+音の強さの変化。
+
+リズムには強弱も含まれる。
+細かくアクセントを入れながら跳ねるように歌うのもメロディよりはリズムの範囲。
+
+抑揚がない要因としては、
+
+- 声が安定しない（そもそも単調と強調がコントロールできてない）
+
+のが一番の原因。
+まずは単調に安定した声を出せないと、強調もできない。
+
+続いて、
+
+- 声の高さが一定
+  - テンションやキーが一定
+  - ピッチが一定
+- 声の大きさが一定
+- 声の速さが一定
+  - タメや間がない
+- 滑舌が悪い
+
+抑揚がないのは単に肺活量が足りないことも考えられる。アクセントのところで強い息が出せてない。
